--- a/sass/main.css
+++ b/sass/main.css
@@ -505,18 +505,18 @@ body {
 }
 
 .card__picture--1 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#a4d483), to(#33B133)), url(/img/img-5.jpg);
-  background-image: linear-gradient(to right bottom, #a4d483, #33B133), url(/img/img-5.jpg);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#a4d483), to(#33B133)), url(../img/img-5.jpg);
+  background-image: linear-gradient(to right bottom, #a4d483, #33B133), url(../img/img-5.jpg);
 }
 
 .card__picture--2 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#c15c5c), to(#9d0000)), url(/img/img-6.jpg);
-  background-image: linear-gradient(to right bottom, #c15c5c, #9d0000), url(/img/img-6.jpg);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#c15c5c), to(#9d0000)), url(../img/img-6.jpg);
+  background-image: linear-gradient(to right bottom, #c15c5c, #9d0000), url(../img/img-6.jpg);
 }
 
 .card__picture--3 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#8f9fe9), to(#3333B1)), url(/img/img-7.jpg);
-  background-image: linear-gradient(to right bottom, #8f9fe9, #3333B1), url(/img/img-7.jpg);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#8f9fe9), to(#3333B1)), url(../img/img-7.jpg);
+  background-image: linear-gradient(to right bottom, #8f9fe9, #3333B1), url(../img/img-7.jpg);
 }
 
 .card__heading {
@@ -1180,8 +1180,8 @@ body {
 
 .header {
   height: 95vh;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(193, 92, 92, 0.8)), to(rgba(157, 0, 0, 0.8))), url(/img/hero.jpg);
-  background-image: linear-gradient(to right bottom, rgba(193, 92, 92, 0.8), rgba(157, 0, 0, 0.8)), url(/img/hero.jpg);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(193, 92, 92, 0.8)), to(rgba(157, 0, 0, 0.8))), url(../img/hero.jpg);
+  background-image: linear-gradient(to right bottom, rgba(193, 92, 92, 0.8), rgba(157, 0, 0, 0.8)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
@@ -1399,8 +1399,8 @@ body {
 
 .section-features {
   padding: 20rem 0;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(193, 92, 92, 0.8)), to(rgba(157, 0, 0, 0.8))), url(/img/img-4.jpg);
-  background-image: linear-gradient(to right bottom, rgba(193, 92, 92, 0.8), rgba(157, 0, 0, 0.8)), url(/img/img-4.jpg);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(193, 92, 92, 0.8)), to(rgba(157, 0, 0, 0.8))), url(../img/img-4.jpg);
+  background-image: linear-gradient(to right bottom, rgba(193, 92, 92, 0.8), rgba(157, 0, 0, 0.8)), url(../img/img-4.jpg);
   background-size: cover;
   background-position: top;
   margin-top: -9rem;
@@ -1455,7 +1455,7 @@ body {
 }
 
 .book {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 50%), url(/img/img-10.jpg);
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 50%), url(../img/img-10.jpg);
   background-size: cover;
   border-radius: 3px;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
@@ -1464,15 +1464,15 @@ body {
 
 @media only screen and (max-width: 75em) {
   .book {
-    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(/img/img-10.jpg);
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../img/img-10.jpg);
     background-size: cover;
   }
 }
 
 @media only screen and (max-width: 56.25em) {
   .book {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.9))), url(/img/img-10.jpg);
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(/img/img-10.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.9))), url(../img/img-10.jpg);
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/img-10.jpg);
   }
 }
 
