--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,7 +14,7 @@
         to right bottom,
         rgba($color-primary-light, .8),
         rgba($color-primary-dark, .8)),
-        url(/img/img-4.jpg);
+        url(../img/img-4.jpg);
     background-size: cover;
     background-position: top;
     margin-top: -9rem;
@@ -63,7 +63,7 @@
         rgba($color-white, .9) 0%,
         rgba($color-white, .9) 65%,
         transparent 50%),
-        url(/img/img-10.jpg);
+        url(../img/img-10.jpg);
     background-size: cover;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
@@ -73,14 +73,14 @@
             rgba($color-white, .9) 0%, 
             rgba($color-white, .9) 65%,
             transparent 65%), 
-            url(/img/img-10.jpg);
+            url(../img/img-10.jpg);
             background-size: cover;
     }
     @include respond(tab-port) {
         background-image: linear-gradient(to right, 
             rgba($color-white, .9) 0%, 
             rgba($color-white, .9) 100%), 
-            url(/img/img-10.jpg);
+            url(../img/img-10.jpg);
     }
 
     &__form {
